# vow-lang

./: .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  HANDOFF.md  README.md  install.sh
.agents/skills/kei-verify/: SKILL.md
.agents/skills/release-bump/: SKILL.md
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.claude/agents/: kei-invariant-auditor.md
.claude/hooks/: post-pr-create-review.prompt.md
.claude/skills/kei-code-review/: SKILL.md
.claude/skills/kei-dogfood/: SKILL.md
.claude/skills/plan-then-delegate/: SKILL.md
.claude/skills/release-bump/: SKILL.md
.claude/workflows/: kei-code-review.js
.codex/agents/: kei-invariant-auditor.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
crates/kei_check/: Cargo.toml
crates/kei_check/src/: check.rs  diagnostic.rs  effects.rs  imports.rs  lib.rs  pbt.rs  report.rs  syntax.rs  types.rs
crates/kei_check/tests/: diagnostic_roundtrip.rs  examples_clean.rs  generative_list_record.rs  golden_check.rs  golden_syntax.rs  import_resolver.rs  list_lit_and_tagged.rs  repair_protocol.rs  report_roundtrip.rs
crates/kei_cli/: Cargo.toml
crates/kei_cli/src/: build.rs  check.rs  cli.rs  fmt.rs  main.rs  mcp.rs  render.rs  resolve.rs  test.rs
crates/kei_cli/tests/: cli.rs
crates/kei_emit/: Cargo.toml
crates/kei_emit/examples/: transpile.rs
crates/kei_emit/src/: emit.rs  lib.rs
crates/kei_emit/tests/: e2e.rs  emit.rs
crates/kei_fmt/: Cargo.toml
crates/kei_fmt/src/: lib.rs
crates/kei_fmt/tests/: examples_canonical.rs  golden_fmt.rs  roundtrip.rs
crates/kei_fmt/tests/util/: mod.rs
crates/kei_lsp/: Cargo.toml
crates/kei_lsp/src/: analysis.rs  convert.rs  lib.rs  main.rs  server.rs
crates/kei_lsp/tests/: server_loop.rs
crates/kei_mcp/: Cargo.toml  build.rs
crates/kei_mcp/src/: embedded.rs  lib.rs  main.rs  server.rs  tools.rs
crates/kei_mcp/tests/: embedding.rs  golden_mcp.rs  stdio_transport.rs
crates/kei_syntax/: Cargo.toml
crates/kei_syntax/src/: ast.rs  error.rs  lexer.rs  lib.rs  parser.rs  span.rs  token.rs
crates/kei_syntax/tests/: parse_basics.rs
crates/pact_emit/: Cargo.toml
crates/pact_emit/examples/: transpile.rs
crates/pact_emit/src/: emit.rs  lib.rs  sourcemap.rs
crates/pact_emit/tests/: e2e.rs  emit.rs
crates/pact_fmt/: Cargo.toml
crates/pact_fmt/src/: lib.rs
crates/pact_fmt/tests/: examples_canonical.rs  golden_fmt.rs  roundtrip.rs
crates/pact_fmt/tests/util/: mod.rs
crates/pact_syntax/: Cargo.toml
crates/vow_check/: Cargo.toml
crates/vow_check/src/: check.rs  diagnostic.rs  lib.rs  syntax.rs  types.rs
crates/vow_check/tests/: diagnostic_roundtrip.rs  examples_clean.rs  golden_check.rs  golden_syntax.rs
crates/vow_cli/: Cargo.toml
crates/vow_cli/src/: build.rs  check.rs  cli.rs  fmt.rs  main.rs  render.rs  test.rs
crates/vow_cli/tests/: cli.rs
crates/vow_emit/: Cargo.toml
crates/vow_emit/examples/: transpile.rs
crates/vow_emit/src/: emit.rs  lib.rs
crates/vow_emit/tests/: e2e.rs  emit.rs
crates/vow_fmt/: Cargo.toml
crates/vow_fmt/src/: lib.rs
crates/vow_fmt/tests/: examples_canonical.rs  golden_fmt.rs  roundtrip.rs
crates/vow_fmt/tests/util/: mod.rs
crates/vow_mcp/: Cargo.toml  build.rs
crates/vow_mcp/src/: embedded.rs  lib.rs  main.rs  server.rs  tools.rs
crates/vow_mcp/tests/: embedding.rs  golden_mcp.rs  stdio_transport.rs
crates/vow_syntax/: Cargo.toml
docs/: cli.md  effect-postconditions-memo.md  fmt-style.md  kei-roadmap-goals.md  kei-roadmap-v0.2.md  kei-roadmap-v0.3.md  kei-roadmap-v0.4.md  pact-roadmap-goals.md  vow-roadmap-goals.md
docs/dev-notes/: handoff-candidates.md  lessons-from-reviews.md
docs/dogfood/: 2026-06-30-v0.4-member-rank.md  2026-06-30-v0.4-numeric-utils.md  2026-06-30-v0.4-order-session.md  2026-06-30-v0.4-product-filter.md  2026-06-30-v0.4-stock-filter.md  2026-06-30-v0.4-study-booking.md  2026-06-30-v0.4-summary.md  2026-06-30-v0.4-tickets.md
editors/vscode/: .vscodeignore  CHANGELOG.md  LICENSE  README.md  extension.js  language-configuration.json  package-lock.json  package.json
examples/basics/: enums.kei  matching.kei  options.pact  records.vow
examples/collections/: inventory.kei
examples/contracts/: borrow_direct.kei  counter.vow  stock_direct.kei  withdraw.kei  withdraw.pact
examples/effects/: clock.kei  transfer.kei  transfer.pact
runtime/: package-lock.json  package.json  tsconfig.json
runtime/src/: index.ts
skills/kei/: SKILL.md
spec/: diagnostic-schema.md  kei-spec-v0.1.md  kei-spec-v0.2.md  kei-spec-v0.3-collections.md  pact-spec-v0.1.md  vow-spec-v0.1.md
spec/errors/: KEI-E0001.md  KEI-E0002.md  KEI-E0003.md  KEI-E0004.md  KEI-E0101.md  KEI-E0102.md  KEI-E0103.md  KEI-E0104.md  KEI-E1001.md  KEI-E1002.md  KEI-E1003.md  KEI-E1004.md  KEI-E2001.md  KEI-E2002.md  KEI-E2003.md  KEI-E2004.md  KEI-E2005.md  KEI-E2006.md  KEI-E2007.md  KEI-E2008.md  KEI-E2009.md  KEI-E2010.md  KEI-E3001.md  KEI-E3002.md  KEI-E3003.md  KEI-E3004.md  KEI-E3005.md  KEI-E4001.md  KEI-E4002.md  KEI-E4003.md  KEI-E4004.md  KEI-E4005.md  KEI-E4006.md  KEI-E4007.md  KEI-E4008.md  PACT-E0001.md  PACT-E0002.md  PACT-E0003.md  PACT-E0004.md  PACT-E0101.md  (+39 more)
tests/e2e/: package-lock.json  package.json  tsconfig.json
tests/mcp/: check_clean.request.json  check_clean.response.json  check_contract.request.json  check_contract.response.json  check_effect_error.request.json  check_effect_error.response.json  examples_index.request.json  examples_index.response.json  examples_none.request.json  examples_none.response.json  examples_search.request.json  examples_search.response.json  fmt_ok.request.json  fmt_syntax_error.request.json  fmt_syntax_error.response.json  initialize.response.json  spec_collections.request.json  spec_collections.response.json  spec_error_code.request.json  spec_error_code.response.json  spec_index.request.json  spec_index.response.json  spec_section.request.json  spec_unknown.request.json  spec_unknown.response.json  tools_call_unknown.request.json  tools_call_unknown.response.json  tools_list.response.json
(+269 files in other folders)
