[workspace]
resolver = "2"
members = [
    "crates/pact_syntax",
    "crates/pact_check",
    "crates/pact_fmt",
    "crates/pact_emit",
    "crates/pact_cli",
    "crates/pact_mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
