[workspace]
resolver = "2"
members = [
    "crates/vow_syntax",
    "crates/vow_check",
    "crates/vow_fmt",
    "crates/vow_emit",
    "crates/vow_cli",
    "crates/vow_mcp",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
