[workspace]
resolver = "2"
members = [
    "crates/kei_syntax",
    "crates/kei_check",
    "crates/kei_fmt",
    "crates/kei_emit",
    "crates/kei_cli",
    "crates/kei_mcp",
    "crates/kei_lsp",
]

[workspace.package]
version = "0.3.1"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
proptest = "1"
