[package]
name = "pact_fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Pact canonical formatter. Must not change AST semantics."

[dependencies]
pact_syntax = { path = "../pact_syntax" }

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true
