[package]
name = "vow_check"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vow semantic checker: name resolution, types, effects, contracts. Sole definition of Diagnostic."

[dependencies]
vow_syntax = { path = "../vow_syntax" }
serde.workspace = true

[dev-dependencies]
serde_json.workspace = true
