[package]
name = "vow_emit"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vow to TypeScript transpiler with source maps. Must not re-implement checking."

[dependencies]
vow_syntax = { path = "../vow_syntax" }
vow_check = { path = "../vow_check" }
serde_json.workspace = true
