[package]
name = "vow_fmt"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vow canonical formatter. Must not change AST semantics."

[dependencies]
vow_syntax = { path = "../vow_syntax" }

[dev-dependencies]
serde_json.workspace = true
proptest.workspace = true
