[package]
name = "vow_mcp"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Vow MCP server: serves spec/ and examples/ embedded at build time. No language-processing logic."

[lib]
name = "vow_mcp"
path = "src/lib.rs"

[[bin]]
name = "vow-mcp"
path = "src/main.rs"

[dependencies]
vow_check = { path = "../vow_check" }
vow_fmt = { path = "../vow_fmt" }
vow_syntax = { path = "../vow_syntax" }
serde_json = { workspace = true }
